fix some layout issues and link images

--- a/public/scss/components/_index.scss
+++ b/public/scss/components/_index.scss
@@ -21,8 +21,8 @@
   }
 }
 
-@media only screen and (max-width: 524px) {
+@media only screen and (max-width: 574px) {
   .main-content {
-    height: 340rem;
+    height: 420rem;
   }
 }
